--- a/newproject/templates/login.html
+++ b/newproject/templates/login.html
@@ -1,10 +1,16 @@
-{% extends 'base_accounts.html' %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
 
 {% block title %}Log in to Django Boards{% endblock %}
 
 {% block content %}
+<div>
   <div class="row justify-content-center">
-    <div class="col-lg-4 col-md-6 col-sm-8">
+    <div class="col-lg-3 col-md-6 col-sm-8">
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Log in</h3>
@@ -25,4 +31,5 @@
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
