--- a/newproject/templates/signup.html
+++ b/newproject/templates/signup.html
@@ -1,10 +1,16 @@
-{% extends 'base_accounts.html' %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
 
 {% block title %}Sign up to Django Boards{% endblock %}
 
 {% block content %}
+<div>
   <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10 col-sm-12">
+    <div class="col-lg-3 col-md-10 col-sm-12">
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Sign up</h3>
@@ -20,4 +26,5 @@
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
