--- a/newproject/templates/base.html
+++ b/newproject/templates/base.html
@@ -175,7 +175,7 @@
                                 <li {% if url_name == 'causes' %}class="current-menu-item"{% endif %}><a href="{% url 'causes' %}">Discover</a></li>
                                 <li {% if url_name == 'services' %}class="current-menu-item"{% endif %}><a href="{% url 'services' %}">Services</a></li>
                                 <li {% if url_name == 'tips' %}class="current-menu-item"{% endif %}><a href="{% url 'tips' %}">Tips</a></li>
-                                <li {% if url_name == 'media' %}class="current-menu-item"{% endif %}><a href="{% url 'media' %}">Media</a></li>
+                                <li {% if url_name == 'news' %}class="current-menu-item"{% endif %}><a href="{% url 'news' %}">Media</a></li>
                                 {% endwith %}
                             </ul>
                         </nav><!-- .site-navigation -->
