--- a/newproject/templates/create_campaign.html
+++ b/newproject/templates/create_campaign.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% load crispy_forms_tags %}
 
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
+
 {% block title %}Start a New Topic{% endblock %}
+
 
 {% block content %}
 <div class="contact-page-wrap">
         <div class="container">
+        
             <div class="row  justify-content-center">
-            <div class="col-12 col-lg-7">
+            <div class="col-12 col-lg-5">
                     {% comment %} <form class="contact-form">
                     <h2>Start a Fundraiser</h2>
                         <input type="text" placeholder="Title">
@@ -18,6 +26,7 @@
                             <input class="btn gradient-bg" type="submit" value="Create">
                         </span>
                     </form> {% endcomment %}
+                    <h2>Create Campaign</h2>
                     <form method ="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
