--- a/newproject/templates/base.html
+++ b/newproject/templates/base.html
@@ -68,14 +68,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Our Democracy{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/elegant-fonts.css' %}">
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
     <link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.css">
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
   <body>
@@ -293,10 +294,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 {% endblock body %}
 <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'js/moment.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-    <script src="{% static 'js/jquery.js' %}"></script>
+    
     <script src="{% static 'js/jquery.collapsible.min.js' %}"></script>
     <script src="{% static 'js/swiper.min.js' %}"></script>
     <script src="{% static 'js/jquery.countdown.min.js' %}"></script>
@@ -304,5 +306,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="{% static 'js/jquery.countTo.min.js' %}"></script>
     <script src="{% static 'js/jquery.barfiller.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
+    {% block script %}{% endblock %}
   </body>
 </html>
