added event functionality of datetime picker

--- a/newproject/templates/create_event.html
+++ b/newproject/templates/create_event.html
@@ -5,7 +5,21 @@
 
 {% block stylesheet %}
   <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-  
+    {# Include FontAwesome; required for icon display #}
+    {% comment %} <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"> {% endcomment %}
+
+    {# Include Bootstrap 4 and jQuery #}
+    {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> {% endcomment %}
+    {% comment %} <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> {% endcomment %}
+
+    {# Django Tempus Dominus assets are included in `{{ form.media }}` #}
+    {% comment %} {{ form.media }} {% endcomment %}
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+  <!-- XDSoft DateTimePicker -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block title %}Start a New Event{% endblock %}
@@ -27,7 +41,7 @@
                             <input class="btn gradient-bg" type="submit" value="Create">
                         </span>
                     </form> {% endcomment %}
-                    <h2>Create Event</h2>
+                    <h2>Create an Event</h2>
                     <form method ="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
@@ -42,19 +56,34 @@
 
 {% block script %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript">
+<script>
+    $(function () {
+    $("#id_start_time").datetimepicker({
+      format: 'd/m/Y H:i',
+    });
+    $("#id_end_time").datetimepicker({
+      format: 'd/m/Y H:i',
+    });
+  });
+  </script>
+
+
+ {% comment %} <script type="text/javascript">
+    
+
+
     $(function () {
         $('#id_start_time').datetimepicker();
         $('#id_end_time').datetimepicker({
-            useCurrent: false //Important! See issue #1075
+            useCurrent: false
         });
-        $("#id_start_time").on("dp.change", function (e) {
-            $('#id_end_time').data("DateTimePicker").minDate(e.date);
+        $("#id_start_time").on("change.datetimepicker", function (e) {
+            $('#id_end_time').datetimepicker('minDate', e.date);
         });
-        $("#id_end_time").on("dp.change", function (e) {
-            $('#id_start_time').data("DateTimePicker").maxDate(e.date);
+        $("#id_end_time").on("change.datetimepicker", function (e) {
+            $('#id_start_time').datetimepicker('maxDate', e.date);
         });
     });
-</script>
+</script> {% endcomment %}
+
 {% endblock %}
