--- a/newproject/templates/create_event.html
+++ b/newproject/templates/create_event.html
@@ -30,7 +30,7 @@
         <div class="container">
         
             <div class="row  justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-lg-6">
                     {% comment %} <form class="contact-form">
                     <h2>Start a Fundraiser</h2>
                         <input type="text" placeholder="Title">
@@ -41,12 +41,16 @@
                             <input class="btn gradient-bg" type="submit" value="Create">
                         </span>
                     </form> {% endcomment %}
-                    <h2>Create an Event</h2>
-                    <form method ="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button type="submit" class = "btn gradient-bg">Create an event</button>
-                    </form>
+                    <div class="card">
+                      <div class="card-body">
+                          <h3 class="card-title"><center>Start an Event</center></h3>
+                          <form method ="post" enctype="multipart/form-data">
+                          {% csrf_token %}
+                          {{ form|crispy }}
+                          <button type="submit" class = "btn gradient-bg">Create an event</button>
+                          </form>
+                      </div>
+                    </div>
 
                 </div>
             </div>
